# BLITZAR

./: .clang-format  .dockerignore  .gitignore  .tmp_open_issues.json  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  MODIFS.md  Makefile  Octree.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  README.md  SCALABILITY.md  TEST_EXPANSION_PLAN.md  Vector.cpp  Vector.hpp  build_and_capture.bat  build_output.txt  gpu.hpp  gravity.comp  index.html  main.cpp  pyproject.toml  rust-toolchain.toml  simulation-10m.ini  simulation-20m.ini  simulation.ini  test-1m-tiled.ini  test.cu  test_output.txt  tmp-test-config.ini  verify_profiles.bat
cmake/: apps.cmake  (+8 more)
rust/: Cargo.toml
rust/blitzar-protocol/: Cargo.toml
rust/blitzar-protocol/src/: codec.rs  framing.rs  lib.rs  schema.rs  version.rs
rust/blitzar-protocol/src/v1/: command.rs  envelope.rs  mod.rs  snapshot.rs  status.rs
rust/blitzar-protocol/tests/: protocol.rs
rust/blitzar-runtime/: Cargo.toml
rust/blitzar-runtime/src/: bridge_state.rs  ffi.rs  lib.rs
rust/blitzar-runtime/tests/: bridge_state.rs
rust/blitzar-web-gateway/: Cargo.toml
rust/blitzar-web-gateway/src/: api.rs  args.rs  backend.rs  error.rs  events.rs  lib.rs  main.rs  ws.rs
rust/blitzar-web-gateway/tests/: args.rs  events.rs  http.rs
tests/: CMakeLists.txt  README.md  __init__.py  physics_regression.cpp
tests/checks/: __init__.py  catalog.json  catalog.py  check.py  clang_tidy_check.py  ini_check.py  ivv_gate_check.py  launcher_check.py  main_delivery_gate_check.py  mirror_check.py  no_legacy_check.py  policy_allowlist.txt  pr_policy_check.py  pr_policy_check_test.py  quality_check.py  run.py  test_catalog_check.py  traceability_gate_check.py
tests/checks/fixtures/: main_delivery_invalid.json  pr_policy_invalid.json  pr_policy_valid.json
tests/checks/suites/: __init__.py  conftest.py  test_changelog.py
tests/checks/suites/core/: test_base_core.py  test_clang_tidy.py  test_clang_tidy_check.py  test_coverage_dashboard.py  test_coverage_publication.py  test_framework_core.py  test_gpu_runner_ops.py  test_release_sbom.py  test_run.py  test_runner.py
tests/checks/suites/policy/: repo_policy_test_support.py  test_cpp_api_documentation_policy.py  test_deviation_fmea.py  test_deviation_register.py  test_fmea_action_register.py  test_fmea_status.py  test_ivv_gate.py  test_pr_policy.py  test_quality_baseline.py  test_quality_manifest_loader.py  test_quality_structure.py  test_repo_policy.py  test_repo_policy_cpp.py  test_repo_policy_decomposition.py  test_repo_policy_headers.py  test_repo_policy_power_of_10.py  test_repo_policy_workflows.py  (+4 more)
tests/checks/tests/: __init__.py  test_clang_tidy_check.py  test_deviation_register.py  test_fmea_action_register.py  test_fmea_status.py  test_ivv_gate.py  test_numerical_validation.py  test_pr_policy.py  test_quality_baseline.py  test_release_evidence_pack.py  test_repo_policy.py  test_repo_policy_power_of_10.py  test_test_catalog.py  test_traceability_gate.py
tests/cmake/: setup.cmake  targets.cmake  targets_gtests.cmake  targets_repo_checks.cmake  windows_paths.cmake
tests/config/: config_args_regression.cpp  validate_simulation_ini.cmake
tests/data/: two_body_rest.xyz  vtk_fixture_ascii.vtk  vtk_fixture_binary.vtk
tests/hosted/: CMakeLists.txt
tests/int/protocol/: connect.cpp  control.cpp  replay.cpp
tests/int/runtime/: bridge.cpp  runtime.cpp  runtime_draw_cap.cpp  runtime_reload.cpp  runtime_unit_like.cpp
tests/int/ui/: qt_window.cpp  qt_window_visual.cpp  qt_workspace_controls.cpp  qt_workspace_overlay_controls.cpp  qt_workspace_runtime_controls.cpp
tests/integration/: CMakeLists.txt  RealBackendHarness.cpp  RealBackendHarness.hpp  backend_protocol_regression.cpp  frontend_backend_bridge_regression.cpp  frontend_runtime_contract_regression.cpp  qt_mainwindow_integration.cpp  validate_launcher_contract.cmake  validate_no_legacy_frontends.cmake
tests/support/: backend_harness.cpp  backend_harness.hpp  backend_harness_runtime.cpp  client_utils.cpp  client_utils.hpp  frontend_utils.cpp  frontend_utils.hpp  numerical_validation_tool.cpp  numerical_validation_tool.hpp  performance_benchmark_tool.cpp  performance_benchmark_tool.hpp  physics_scenario.cpp  physics_scenario.hpp  physics_test_utils.cpp  physics_test_utils.hpp  poll_utils.cpp  poll_utils.hpp  qt_test_utils.cpp  qt_test_utils.hpp  scoped_env_var.cpp  scoped_env_var.hpp  scoped_env_var_posix.cpp  scoped_env_var_win.cpp  server_harness.cpp  server_harness.hpp  server_harness_runtime.cpp
tests/tools/: numerical_validation_main.cpp  performance_benchmark_main.cpp
tests/unit/config/: args_cli.cpp  args_cli_usage.cpp  args_io.cpp  args_io_directive.cpp  args_io_validation.cpp  args_octree.cpp  env_utils.cpp  init_plan_edges.cpp  scenario_validation.cpp  scenario_validation_edges.cpp  scenario_validation_init_modes.cpp  simulation_profile.cpp
tests/unit/ffi/: core_api.cpp  vtk_conformance.cpp
tests/unit/graphics/: TST_UNT_GRA_GraphicsTests.cpp
tests/unit/module_cli/: backend_ops_validation.cpp  command_batch_runner.cpp  command_catalog.cpp  command_executor.cpp  command_executor_flows.cpp  command_executor_flows_profile_export.cpp  command_parser.cpp  command_parser_expansion_a.cpp  command_parser_expansion_b.cpp  server_ops_validation.cpp  text_and_commands.cpp
tests/unit/module_client/: cli_args_text.cpp  client_common.cpp  client_module_boundary.cpp  platform_adapters.cpp
tests/unit/module_host/: cli_args_text.cpp  frontend_module_boundary.cpp
tests/unit/physics/: TST_PHY_ProfileTests.cpp  checkpoint.cpp  export_queue.cpp  extended_solvers.cpp  force_law_policy.cpp  multibody.cpp  octree_criteria.cpp  octree_gpu_stability.cpp  orbit.cpp  reentrancy.cpp  runtime_reload.cpp  solver.cpp  substep_policy.cpp
tests/unit/protocol/: json_codec.cpp  json_codec_parse.cpp  json_codec_parse_edge_cases.cpp
tests/unit/ui/: TST_UNT_UI_UiEnums.cpp  qt_mainwindow_controller.cpp  qt_mainwindow_presenter.cpp  qt_octree_overlay.cpp  qt_theme_loader.cpp  qt_throughput_advisor.cpp  qt_workspace_layout_store.cpp
(+969 files in other folders)
