[workspace]
members = ["blitzar-protocol", "blitzar-runtime", "blitzar-web-gateway"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8.6", features = ["http1", "json", "tokio", "ws"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "sync", "time"] }
tower = "0.5.2"
