[package]
name = "blitzar-web-gateway"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "blitzar-web-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
blitzar-protocol = { path = "../blitzar-protocol" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util = "0.1.3"
tower.workspace = true
